feat: observable other less files

--- a/public/style.css
+++ b/public/style.css
@@ -3,9 +3,10 @@
   padding: 5%;
 }
 body {
-  background-color: #9acd32;
+  background-color: #d82863;
 }
 h1 {
+  color: #000000;
   margin: 0;
   padding: 0;
   text-align: center;
