--- a/public/personalVariables.less
+++ b/public/personalVariables.less
@@ -1,2 +1,7 @@
+@import 'public/personalVariablesText.less';
+
 @base-bg: rgb(154, 205, 50);
 @base-bg: rgb(216, 40, 99);
+// @base-bg: rgb(20, 20, 99);
+
+
