--- a/public/style.css
+++ b/public/style.css
@@ -6,7 +6,7 @@ body {
   background-color: #d82863;
 }
 h1 {
-  color: #000000;
+  color: #e6c8e6;
   margin: 0;
   padding: 0;
   text-align: center;
