with tslint and 4 spaces

--- a/public/personalVariables.less
+++ b/public/personalVariables.less
@@ -1,4 +1,4 @@
-@import 'public/personalVariablesText.less';
+// @import 'public/personalVariablesText.less';
 
 @base-bg: rgb(154, 205, 50);
 @base-bg: rgb(216, 40, 99);
