add relative paths

--- a/public/style.less
+++ b/public/style.less
@@ -1,5 +1,5 @@
+@import "./customization/personalVariables.less";
 @import "public/colorsLibrary.less";
-@import "public/personalVariables.less";
 
 
 * {
