--- a/public/customization/personalVariables.less
+++ b/public/customization/personalVariables.less
@@ -1,4 +1,4 @@
-// @import 'public/personalVariablesText.less';
+@import './personalVariablesText.less';
 
 @base-bg: rgb(154, 205, 50);
 @base-bg: rgb(216, 40, 99);
