make different absolute paths

--- a/public/style.less
+++ b/public/style.less
@@ -1,5 +1,6 @@
-@import "./customization/personalVariables.less";
+@import "./../stillStyles.less";
 @import "public/colorsLibrary.less";
+@import "./customization/personalVariables.less";
 
 
 * {
