feat: watcher with different paths

--- a/public/style.less
+++ b/public/style.less
@@ -1,5 +1,5 @@
 @import "./../stillStyles.less";
-@import "public/colorsLibrary.less";
+@import "./colorsLibrary.less";
 @import "./customization/personalVariables.less";
 
 
